<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_homepage"
                android:icon="@drawable/ic_home_variant_white_48dp"
                android:title="@string/site" />

            <item
                android:id="@+id/nav_multas"
                android:icon="@drawable/ic_comment_text_outline_white_48dp"
                android:title="@string/multas" />

            <item
                android:id="@+id/nav_gru"
                android:icon="@drawable/ic_barcode_white_48dp"
                android:title="@string/gru" />

            <item
                android:id="@+id/nav_bat"
                android:icon="@drawable/ic_car_white_48dp"
                android:title="@string/bat" />

            <item
                android:id="@+id/nav_contatos"
                android:icon="@drawable/ic_phone_classic_white_48dp"
                android:title="@string/contatos" />

            <item
                android:id="@+id/nav_postos_apoio"
                android:icon="@drawable/ic_map_marker_white_24dp"
                android:title="@string/pontos_apoio" />
    </group>
</menu>
